# generate_startercode

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  sync_issue.py  transform.py
.github/workflows/: ci.yml  release.yml
tests/: test_transform.py
