[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "generate-startercode"
version = "1.2.0"
description = "Generate startercode and solution branches from a shared main branch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0.2", "python-gitlab[graphql]>=6.4.0"]

[tool.uv]
package = false

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.4",
    "ty>=0.0.1a16",
    "python-semantic-release>=9.15.2",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.semantic_release]
branch = "main"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
upload_to_vcs_release = true
assets = ["uv.lock"]
commit_message = "chore(release): v{version} [skip ci]"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
major_on_zero = false
build_command = "uv lock"
